@@ -259,6 +259,18 @@ namespace dolfin
     void tabulate_coordinates(boost::multi_array<double, 2>& coordinates,
                                       const Cell& cell) const;
 
+    /// Return a map between vertices and dofs 
+    /// (vert_ind = vertex_to_dof_map[dof_ind])
+    /// 
+    /// *Arguments*
+    ///     mesh (_Mesh_)
+    ///         The mesh to create the map between
+    ///
+    /// *Returns*
+    ///     std::vector<std::size_t>
+    ///         The vertex to dof map
+    std::vector<std::size_t> vertex_to_dof_map(Mesh& mesh) const;
+    
     /// Create a copy of the dof map
     ///
     /// *Returns*
