@@ -1,3 +1,4 @@
+ - Add vertex_to_dof_map to DofMap, which map vertex indices to dolfin dofs
 1.1.0 [2013-01-08]
  - Add support for solving singular problems with Krylov solvers (PETSc only)
  - Add new typedef dolfin::la_index for consistent indexing with linear algebra backends.
